Changes --> Connected app to the database using JPA --> Designed a web form --> Able to make an entry to the database using the webpage

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,13 @@
         </dependency>
 
 
+        <!-- https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-multipart -->
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-binding</artifactId>
